--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Roi Naveiro
+subtitle: Data Scientist
 use-site-title: true
+meta-title: "Roi Naveiro"
+meta-description: "Data Scientist"
+bigimg:
+    - "/img/leon.jpg" : "Photo by Dani C. R."
 ---
 
 <div class="posts-list">
