add some rpesentations

--- a/presentations/GDSG_slides/gmsg.html
+++ b/presentations/GDSG_slides/gmsg.html
@@ -271,7 +271,12 @@ a change between the data distribution at training and test times.
 * Note the dimension of the attacker's decision space is huge! He needs to modify `\(k=3263\)` data points each with  `\(n=11\)` components!
 
 ---
-# Conclusions and future directions
+
+# Conclusions
+
+&lt;br/&gt;
+&lt;br/&gt;
+&lt;br/&gt;
 
 * Two solution methods: forward and backward.
 
@@ -284,7 +289,12 @@ a change between the data distribution at training and test times.
 * **Novel** derivation of the backward solution formulating the Stackelberg game as a PDE-constrained optimization problem.
 
 ---
+
 # Future work
+
+&lt;br/&gt;
+&lt;br/&gt;
+&lt;br/&gt;
 
 * Games with uncertainty, i.e. `\(\Psi_D(\alpha, \beta) = \int u_D(\alpha, \theta) p(\theta \vert \alpha, \beta) \mathop{}\! \mathrm{d}  \theta\)` and `\(\Psi_A(\alpha, \beta) = \int u_A(\beta, \theta) p(\theta \vert \alpha, \beta) \mathop{}\! \mathrm{d}  \theta\)`.
 
