--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ use-site-title: true
 meta-title: "Roi Naveiro"
 meta-description: "Data Scientist"
 bigimg:
-    - "/img/vegac.jpg" 
+    - "/img/med.jpg" 
 ---
 
 <div class="posts-list">
