--- a/presentations/GDSG_slides/gmsg.html
+++ b/presentations/GDSG_slides/gmsg.html
@@ -3,7 +3,7 @@
   <head>
     <title>Gradient Methods for Solving Stackelberg Games</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Roi Naveiro" />
+    <meta name="author" content="Roi Naveiro and David Ríos" />
     <link href="libs/remark-css-0.0.1/metropolis.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/metropolis-fonts.css" rel="stylesheet" />
   </head>
@@ -13,7 +13,7 @@ class: center, middle, inverse, title-slide
 
 # Gradient Methods for Solving Stackelberg Games
 ## SAMSI
-### Roi Naveiro
+### Roi Naveiro and David Ríos
 ### <a href="mailto:roi.naveiro@icmat.es" class="email">roi.naveiro@icmat.es</a> | Inst. of Mathematical Sciences (ICMAT-CSIC)
 
 ---
