--- a/presentations/GDSG_slides/gmsg.html
+++ b/presentations/GDSG_slides/gmsg.html
@@ -319,9 +319,11 @@ class: middle, center, inverse
 
 # Thank you!!
 
-&lt;span style="color:cyan"&gt;roi.naveiro@icmat.es&lt;/span&gt;
+**Website** &lt;span style="color:cyan"&gt;roinaveiro.github.io/&lt;/span&gt;
 
-&lt;span style="color:cyan"&gt;www.github.com/roinaveiro/GM_SG&lt;/span&gt;
+**Email** &lt;span style="color:cyan"&gt;roi.naveiro@icmat.es&lt;/span&gt;
+
+**GitHub** &lt;span style="color:cyan"&gt;github.com/roinaveiro/GM_SG&lt;/span&gt;
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
