--- a/presentations/GDSG_slides/gmsg.html
+++ b/presentations/GDSG_slides/gmsg.html
@@ -13,7 +13,7 @@ class: center, middle, inverse, title-slide
 
 # Gradient Methods for Solving Stackelberg Games
 ### Roi Naveiro
-### <a href="mailto:roi.naveiro@icmat.es">roi.naveiro@icmat.es</a> | Inst. of Mathematical Sciences (ICMAT-CSIC). Madrid (Spain).
+### <a href="mailto:roi.naveiro@icmat.es" class="email">roi.naveiro@icmat.es</a> | Inst. of Mathematical Sciences (ICMAT-CSIC). Madrid (Spain).
 
 ---
 
