--- a/presentations/GDSG_slides/gmsg.html
+++ b/presentations/GDSG_slides/gmsg.html
@@ -70,7 +70,7 @@ class: center, middle, inverse, title-slide
 
 # Regularized Empirical Costs
 
-* Theoretical costs defined above depend on the unknown distributions `\(p\)` and `\(\bar{p}\)`.
+* This theoretical costs depend on the unknown distributions `\(p\)` and `\(\bar{p}\)`.
 
 * We focus on their regularized empirical counterparts, given by
 
