--- a/presentations/GDSG+APS/gmsg+aps.html
+++ b/presentations/GDSG+APS/gmsg+aps.html
@@ -17,7 +17,7 @@ class: center, middle, inverse, title-slide
 
 ---
 
-# Sequential Defend Attack Games
+# Sequential Defense Attack Games
 
 &lt;center&gt;
 ![:scale 60%](./img/ssg.png)
@@ -328,23 +328,25 @@ class: inverse, center, middle
 # Simulation Based Solution Method
 
 ---
-# Seq. Games with Uncertain Outcomes
-
-&lt;center&gt;
-![:scale 60%](./img/baid.png)
-&lt;/center&gt;
-
----
-# A more realistic example
+# A realistic example
 
 &lt;center&gt;
 ![:scale 70%](./img/casebaid.png)
 &lt;/center&gt;
 
 ---
+# Seq. Games with Uncertain Outcomes
+
+&lt;center&gt;
+![:scale 60%](./img/baid.png)
+&lt;/center&gt;
+
+
+
+---
 # Game theoretic approach
 
-* **Common Knowledge Assumtion**: the Defender nows the Attacker's probabilities and utilities.
+* **Common Knowledge Assumtion**: the Defender knows the Attacker's probabilities and utilities.
 * Compute expected utilities.
 
 `\begin{equation*}
@@ -354,7 +356,7 @@ class: inverse, center, middle
 
 --
 
-* Attacker's best respons to defense `\(d\)`
+* Attacker's best response to defense `\(d\)`
 `\begin{equation}
 a^*(d) = \arg\max_{a \in \mathcal{A}}\, \psi_A(d,a)
 \end{equation}`
@@ -377,7 +379,8 @@ d^*_\text{GT} = \arg\max_{d \in \mathcal{D}}\, \psi_D(d, a^*(d)).
 
 * Requires generating `\(\vert \mathcal{D} \vert \times (\vert \mathcal{A} \vert \times Q + P)\)` samples.
 
-* Efficient if uncertainty does not depend on decision.
+* Efficient if cardinality of decision spaces is low.
+
 ---
 # APS solution method
 
@@ -415,15 +418,15 @@ d^*_\text{GT} = \arg\max_{d \in \mathcal{D}}\, \psi_D(d, a^*(d)).
 ---
 # APS solution method
 
-* This approach requires generating **at most** `\(N \times (2 \times M)+ 2 \times N\)`.
+* This approach requires generating **at most** `\(N \times (2 \times M)+ 2 \times N\)` samples.
 
-* We get rid off the cardinality of decision spaces.
+* We get rid of the cardinality of decision spaces.
 
 * This approach is more efficient when cardinality of decision sets is very big or they are continuous.
 
 * Arbitrary precision in the continuous case...
 
-* Allows simulating from a **power transformation**, as in ().
+* Allows simulating from a **power transformation**, as in Müller (2004).
 
 
 ---
@@ -439,7 +442,7 @@ d^*_\text{GT} = \arg\max_{d \in \mathcal{D}}\, \psi_D(d, a^*(d)).
 
 * `\(u_D = 1 - \exp(-h \times f(d,\theta))\)`
 
-* Attacker's payoff: `\(g(d, \theta) = (1-\theta) \times s - c \times d\)`.
+* Attacker's payoff: `\(g(d, \theta) = \theta \times s - e \times a\)`.
 
 * `\(u_A = \exp(-k \times g(a,\theta))\)`
 
@@ -512,8 +515,9 @@ d^*_\text{GT} = \arg\max_{d \in \mathcal{D}}\, \psi_D(d, a^*(d)).
 
 * Requires `\(\vert \mathcal{D} \vert \times (2M \times J) + 3N\)` sampels.
 
-* We are able to get rid off the cardinality of the attacker's decision space, but not that of the Defender's.
+* We are able to get rid of the cardinality of the attacker's decision space, but not that of the Defender's.
 
+* We can get rid of both, using Metropolis Hastings as before.
 
 ---
 # Application
@@ -564,17 +568,17 @@ d^*_\text{GT} = \arg\max_{d \in \mathcal{D}}\, \psi_D(d, a^*(d)).
 
 * APS better when cardinality of decision spaces is big (or spaces are continuous).
 
+* Suggested **algorithmic approach**
+
+  1. Use MC for broad exploration of decision space.
+  2. Use APS within regions of interest to get refined solutions.
+  
 * Suggested approach to choose **solution concept**: 
  
   1. Compute Nash equilibrium.
   2. Asses robustness to perturbations in `\((u_A, p_A)\)`.
   3. If not robust, use ARA solution.
 
-
-* Suggested **algorithmic approach**
-
-  1. Use MC for broad exploration of decision space.
-  2. Use APS within regions of interest to get refined solutions.
 
 ---
 
