--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ title: Roi Naveiro
 subtitle: Data Scientist
 use-site-title: true
 meta-title: "Roi Naveiro"
-meta-description: "Data Scientist"
+meta-description: "PhD Student"
 bigimg:
-    - "/img/med.jpg" 
+    - "/img/med.jpg"
 ---
 
 <div class="posts-list">
