--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Roi Naveiro
-subtitle: Data Scientist
+subtitle: PhD Student
 use-site-title: true
 meta-title: "Roi Naveiro"
 meta-description: "PhD Student"
