--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 layout: page
 title: Roi Naveiro
-subtitle: PhD Student
+subtitle: PhD
 use-site-title: true
 meta-title: "Roi Naveiro"
-meta-description: "PhD Student"
+meta-description: "PhD"
 bigimg:
     - "/img/med.jpg"
 ---
